<resources>
    <!--label-->
    <string name="app_name">Store Management</string>
    <string name="all">All</string>
    <string name="main_label">Main Page</string>
    <!--Splash-->
    <string name="splash_ver">Ver 1.0</string>

    <!--Login-->
    <string name="login_title">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn_text">Sign In</string>

    <string name="login_failed">Sign in failed. Please try again!</string>
    <string name="login_email_null">Email field can not be empty</string>
    <string name="login_password_null">Password field can not be empty</string>

    <!--Main-->
    <string name="main_load_title">Loading Data</string>

    <!--Main.Navigation-->
    <string name="main_nav_main_page">Main Page</string>
    <string name="main_nav_sell">Create PayBill</string>
    <string name="main_nav_import">Import</string>
    <string name="main_nav_staff_manage">Staff Management</string>
    <string name="main_nav_statistical">Store Statistics</string>\
    <string name="main_nav_logout">Sign out</string>

    <!--Main.User-->
    <string name="main_user_time_title">Login Time:</string>

    <!--Main.Header-->
    <string name="main_header_user">User Info:</string>
    <string name="main_header_manager_content">Session Staffs:</string>
    <string name="main_header_staff_content">Storage:</string>

    <!--Main.Staff-->
    <string name="main_staff_type_search">Type:\u0020</string>
    <string name="main_staff_category_search">Category:\u0020</string>
    <string name="main_staff_search_all">All</string>
    <string name="main_staff_search">Search</string>

    <!--Main.Staff.ProductItem-->
    <string name="main_staff_cost">Cost: %d</string>
    <string name="main_staff_amount">Amount: %d</string>

    <!--Bill-->
    <string name="bill_pay">Pay Bill</string>
    <string name="bill_import">Import Bill</string>
    <string name="bill_action_done">Done</string>
    <string name="bill_scan_title">Press on the above icon to scan</string>
    <string name="bill_detail_title">Bill Detail:</string>
    <string name="bill_detail_name">Product</string>
    <string name="bill_detail_cost">Cost</string>
    <string name="bill_detail_count">Quantity</string>
    <string name="bill_pay_done">PayBill created!</string>
    <string name="bill_import_done">ImportBill created!</string>
    <!--Scanner-->
    <string name="scanner_label">Product Qr Scanner</string>
    <string name="scanner_not_valid_content">Not a valid Product Code</string>

    <!--StaffItem-->
    <string name="staff_action_call">Call</string>
    <string name="staff_action_sms">SMS</string>

    <!--StaffManage-->
    <string name="staff_search_hint">Search by Id, Name</string>
    <string name="staff_manage_label">Staff Management</string>

    <!--StaffInfo-->
    <string name="staff_info_title">Staff Info</string>
    <string name="staff_position">Position:\u0020</string>
    <string name="staff_name">User name:\u0020</string>
    <string name="staff_phone">Phone number:\u0020</string>
    <string name="staff_session">Session time:\u0020</string>
    <string name="staff_email">Email:\u0020</string>
    <string name="staff_action_mail">Send mail</string>
    <string name="staff_session_time">%s - %s</string>
    <string name="staff_user_not_valid">UserId is not valid!</string>

    <!--ReportManage-->
    <string name="report_manage_header_type">Type</string>
    <string name="report_manage_header_time">Create time</string>
    <string name="report_manager_header_staff">Staff</string>

    <!--ReportInfo-->
    <string name="report_overview_header">Report Overview:</string>
    <string name="report_detail_header">Report Detail:</string>
    <string name="report_overview_time">Time:</string>
    <string name="report_overview_user">Staff:</string>
    <string name="report_overview_type">Bill type:</string>
    <string name="report_overview_total_cost">Total cost:</string>
    <string name="report_overview_pay_bill">Pay Bill</string>
    <string name="report_overview_import_bill">Import Bill</string>
    <string name="report_invalid">Invalid Report</string>
    <string name="report_info_label">Report %s</string>
</resources>
