<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorGrey"
        android:theme="@style/AppTheme.Toolbar" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="enterAlwaysCollapsed">

                <ImageView
                    android:id="@+id/bill_scan_img"
                    android:layout_width="@dimen/bill_scan_icon_size"
                    android:layout_height="@dimen/bill_scan_icon_size"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_qr_scan" />

                <TextView
                    android:id="@+id/bill_scan_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bill_scan_img"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/bill_scan_title"
                    android:textColor="@color/colorWhite" />
                //header

                <TextView
                    android:id="@+id/bill_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bill_header_height"
                    android:layout_below="@id/bill_scan_title"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:text="@string/bill_detail_title"
                    android:textColor="@color/colorWhite" />
            </RelativeLayout>
        </android.support.design.widget.AppBarLayout>

        <!--PayBill Detail-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/bill_detail_header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/bill_detail_name"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bill_detail_cost"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bill_detail_count"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/bill_product_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/bill_detail_header_layout"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"></android.support.v7.widget.RecyclerView>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>