<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:background="@color/colorGrey"
    android:orientation="vertical"
    android:paddingLeft="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/report_overview_time"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/report_content_text_size" />

        <TextView
            android:id="@+id/overview_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/report_content_text_size"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/report_overview_user"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/report_content_text_size" />

        <TextView
            android:id="@+id/overview_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/report_content_text_size"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/report_overview_type"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/report_content_text_size" />

        <TextView
            android:id="@+id/overview_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/report_content_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/report_overview_total_cost"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/report_content_text_size" />

        <TextView
            android:id="@+id/overview_cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/report_content_text_size"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>